--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.64"
+    "zod": "^3.25.64",
+    "lightningcss": "^1.21.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
